# NumericalAnalysis

./: .gitignore  CMakeLists.txt  binterpolation.c  construct_eqn.c  diff.c  diff.h  diff_driver.c  finterpolation.c  fraction.c  fraction.h  gausselimination.c  gaussjacobi.c  gaussjordan.c  gaussseidel.c  input.c  input.h  lagrange.c  poly_driver.c  polynomial.c  polynomial.h  utility.c  utility.h
